# gh-profiler

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  conftest.py  gh_profiler.py  main.py  profile_data.py  pyproject.toml  test_all.sh  tox.ini
.github/workflows/: profile_contributors.yml  profile_ehm_comments.yml  test.yml
developer_resources/: actual_users.toml  benchmark.py  test_actual_users.py
src/gh_profiler/: cli.py  gh_profiler.py  main.py
src/gh_profiler/templates/: profile_contributors.yml  profile_contributors_link_only.yml
src/gh_profiler/utils/: analysis_utils.py  cli_config.py  cli_utils.py  flags.py  infra_utils.py  profile_data.py  profile_utils.py  repo_analysis.py  repo_data.py  repo_fetching.py  repo_summary.py  summary_utils.py  workflow_utils.py
tests/e2e_tests/: test_profiler.py
tests/unit_tests/: conftest.py  test_adjust_flags.py  test_flag_evaluations.py  test_summary.py
tests/unit_tests/reference_files/: reference_summaries.py
utils/: analysis_utils.py  infra_utils.py  profile_utils.py  summary_utils.py
