[project]
name = "gh-profiler"
version = "0.1.1"
description = "Examine a GitHub user's profile, and help quickly decide how much to invest in their contributions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.3",
]

[project.scripts]
gh-profiler = "gh_profiler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
