[project]
name = "gh-profiler"
version = "0.3.2"
description = "Examine a GitHub user's profile, to help quickly decide how much to invest in their contributions."
authors = [
    {name = "Eric Matthes", email = "ehmatthes@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.3",
]

[project.scripts]
gh-profiler = "gh_profiler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
