[project]
name = "gh-profiler"
version = "0.8.2"
description = "Examine a GitHub user's profile, to help quickly decide how much to invest in their contributions."
authors = [
    {name = "Eric Matthes", email = "ehmatthes@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.3",
    "httpx2>=2.3.0",
    "humanize>=4.15.0",
    "rich>=15.0.0",
]

[project.scripts]
gh-profiler = "gh_profiler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
]
